testsuite/tests/parser/should_fail/T19923b.stderr

T19923b.hs:1:17: error: [GHC-04924]
    Unknown flag in  {-# OPTIONS_GHC #-} pragma: T19923
